--- a/New DTAPP/Views/Transfers/Index.cshtml
+++ b/New DTAPP/Views/Transfers/Index.cshtml
@@ -16,8 +16,8 @@
         </p>
     <p>
         <a asp-action="Create"><img src="~/images/Add.png" /></a>
-        @if (User.IsInRole(Admin) || User.IsInRole(Supervisor))
-        {
+        @* @if (User.IsInRole(Admin) || User.IsInRole(Supervisor))
+        { *@
             <a asp-action="CreateExportReportstring"
             asp-controller="ReportGenerator"
             asp-route-sortOrder="@ViewBag.SortOrder"
@@ -28,65 +28,89 @@
             asp-route-filterTransferDenied="@ViewBag.FilterTransferDenied"
             asp-route-filterSpillOccurred="@ViewBag.FilterSpillOccurred"
             asp-route-filterClientName="@ViewBag.filterClientName"
+            asp-route-selectedOrigSystem="@ViewBag.SelectedOrigSystem"
+            asp-route-selectedDestSystem="@ViewBag.SelectedDestSystem"
                style="float:right;"><img src="~/images/draft.png" height="30" width="30" title="Generate Report" /></a>
-        }
+        @* } *@
     </p>
 <form asp-action="Index">
-        <input type="hidden" name="filtered" value="ButtonClicked" />
-    <div class="row">
-        <div class="col">
-            <div class="form-group">
-                <label for="selectedUnit">Client Unit</label>
-                @Html.DropDownList("selectedUnit", ViewBag.ClientUnitId,"", htmlAttributes: new { @class = "form-select" })
-                
-            </div>
-        </div>
-        <div class="col">
-            <div class="form-group">
-                <label for="raisedAfter">Raised After:</label>
-                    @Html.TextBox("raisedAfter", ViewBag.RaisedAfter, "", htmlAttributes: new { @class = "datefield form-select", type = "datetime-local" })
-            </div>
-        </div>
-        <div class="col">
-            <div class="form-group">
-                <label for="raisedBefore">Raised Before:</label>
-                    @Html.TextBox("raisedBefore", ViewBag.RaisedBefore, "", htmlAttributes: new { @class = "datefield form-select", type = "datetime-local" })
-            </div>
-        </div>
-        <div class="col">
-            <div class="form-group">
-                <label for="selectedCompletedUser">Completed User</label>
-                @Html.DropDownList("selectedCompletedUser", ViewBag.CompletedUserId, "", htmlAttributes: new { @class = "form-select" })
-            </div>
-        </div>
-        <div class="col">
-            <div class="form-group">
-                <label for="filterClientName">Client Name</label>
-                @Html.TextBox("filterClientName", ViewBag.FilterClientName, "", htmlAttributes:new { @class = "form-control"})
-            </div>
-        </div>
+    <input type="hidden" name="filtered" value="ButtonClicked" />
 
-            <div class="col">
-                <div class="form-group">
-                    <label for="filterSpillOccurred">Spill Occurred</label>
-                    @Html.CheckBox("filterSpillOccurred", ViewBag.FilterSpillOccurred, htmlAttributes: new { @class = "form-check" })
+    <button type="button" class="btn btn-outline-secondary btn-lg my-3" data-bs-toggle="collapse" data-bs-target="#collapseFilters" aria-expanded="false" aria-controls="collapseFilters">
+        <img src="~/images/Details.png" height="20" width="20" alt="Filter Options Image" class="mx-2" />Filters
+    </button>
+
+    <div id="collapseFilters" class="collapse show">
+        <div class="card card-body">
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label for="selectedUnit">Client Unit</label>
+                        @Html.DropDownList("selectedUnit", ViewBag.ClientUnitId,"", htmlAttributes: new { @class = "form-select" })
+                
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="raisedAfter">Raised After:</label>
+                            @Html.TextBox("raisedAfter", ViewBag.RaisedAfter, "", htmlAttributes: new { @class = "datefield form-select", type = "datetime-local" })
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="raisedBefore">Raised Before:</label>
+                            @Html.TextBox("raisedBefore", ViewBag.RaisedBefore, "", htmlAttributes: new { @class = "datefield form-select", type = "datetime-local" })
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="selectedCompletedUser">Completed User</label>
+                        @Html.DropDownList("selectedCompletedUser", ViewBag.CompletedUserId, "", htmlAttributes: new { @class = "form-select" })
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="filterClientName">Client Name</label>
+                        @Html.TextBox("filterClientName", ViewBag.FilterClientName, "", htmlAttributes:new { @class = "form-control"})
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="filterSpillOccurred">Spill Occurred</label>
+                        @Html.CheckBox("filterSpillOccurred", ViewBag.FilterSpillOccurred, htmlAttributes: new { @class = "form-check" })
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label for="filterTransferDenied">Transfer Denied</label>
+                        @Html.CheckBox("filterTransferDenied", ViewBag.FilterTransferDenied, htmlAttributes: new { @class = "form-check" })
+                    </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="form-group">
-                    <label for="filterTransferDenied">Transfer Denied</label>
-                    @Html.CheckBox("filterTransferDenied", ViewBag.FilterTransferDenied, htmlAttributes: new { @class = "form-check" })
+            <div class="row my-2">
+                <div class="col-2">
+                    <div class="form-group">
+                        <label for="selectedOrigSystem">Originating System</label>
+                        @Html.DropDownList("selectedOrigSystem", ViewBag.OrigSystemId, "", htmlAttributes: new { @class = "form-select" })
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="form-group">
+                        <label for="selectedDestinationSystem">Destination System</label>
+                        @Html.DropDownList("selectedDestSystem", ViewBag.DestSystemId, "", htmlAttributes: new { @class = "form-select" })
+                    </div>
+                </div>
+                <div class="col" style="align-self: end; text-align: end;">
+                    <button type="submit" style="border: 0; background: transparent">
+                        <img src="~/images/More.png" height="20" width="20" title="Filter" />
+                    </button>
+                    <a asp-action="Index"
+                        asp-route-sortOrder="@ViewBag.SortOrder"
+                        asp-route-clearFilters="true">
+                        <img src="~/images/Cancel.png" height="20" width="20" title="Clear" />
+                    </a>
                 </div>
             </div>
-        <div class="col" style="align-self: end; text-align: end;">
-            <button type="submit" style="border: 0; background: transparent">
-                <img src="~/images/More.png" height="20" width="20" title="Filter" />
-            </button>
-            <a asp-action="Index"
-               asp-route-sortOrder="@ViewBag.SortOrder"
-                asp-route-clearFilters="true">
-                <img src="~/images/Cancel.png" height="20" width="20" title="Clear" />
-           </a>
         </div>
     </div>
 
@@ -95,7 +119,7 @@
         <tr>
             <th style="min-width: 12rem;">
                     
-                    Time of Request (Zulu)
+                    Time of Request
                     <div class="sort-div">
                         <a asp-action="Index"
                            asp-route-sortOrder="RequestCreatedAtAsc"
@@ -123,7 +147,7 @@
                     </div>
             </th>
                 <th style="min-width: 12rem;">
-                    Sent Time (Zulu)
+                    Sent Time
                 <div class="sort-div">
                     <a asp-action="Index"
                         asp-route-sortOrder="SentTimeAsc"
@@ -627,7 +651,8 @@
     @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.SortOrder, selectedUnit = ViewBag.SelectedUnit, 
                                                                     raisedAfter = ViewBag.RaisedAfter,raisedBefore = ViewBag.RaisedBefore,
                                                                     selectedCompletedUser = ViewBag.SelectedCompletedUser, filterSpillOccurred = @ViewBag.FilterSpillOccurred,
-                                                                    filterTransferDenied = @ViewBag.FilterTransferDenied
+                                                                    filterTransferDenied = @ViewBag.FilterTransferDenied, selectedOrigSystem = ViewBag.SelectedOrigSystem,
+                                                                    selectedDestSystem = ViewBag.SelectedDestSystem
             }), 
     new X.PagedList.Web.Common.PagedListRenderOptions
 {
