--- a/New DTAPP/Views/Transfers/Index.cshtml
+++ b/New DTAPP/Views/Transfers/Index.cshtml
@@ -15,7 +15,7 @@
         <p>Transfer Request Count: @ViewBag.TotalCount
         </p>
     <p>
-        <a asp-action="Create"><img src="~/images/Add.png" /></a>
+        <a asp-action="Create"><img src="~/images/Add.png" title="Create Transfer"/></a>
         @* @if (User.IsInRole(Admin) || User.IsInRole(Supervisor))
         { *@
             <a asp-action="CreateExportReportstring"
@@ -74,16 +74,16 @@
                         @Html.TextBox("filterClientName", ViewBag.FilterClientName, "", htmlAttributes:new { @class = "form-control"})
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-1">
                     <div class="form-group">
-                        <label for="filterSpillOccurred">Spill Occurred</label>
-                        @Html.CheckBox("filterSpillOccurred", ViewBag.FilterSpillOccurred, htmlAttributes: new { @class = "form-check" })
+                        <label for="filterSpillOccurred">Spill Occurred</label><br />
+                        @Html.CheckBox("filterSpillOccurred", ViewBag.FilterSpillOccurred, htmlAttributes: new { @class = "form-check-input filterChecks" })
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-1">
                     <div class="form-group">
-                        <label for="filterTransferDenied">Transfer Denied</label>
-                        @Html.CheckBox("filterTransferDenied", ViewBag.FilterTransferDenied, htmlAttributes: new { @class = "form-check" })
+                            <label for="filterTransferDenied">Transfer Denied</label><br />
+                        @Html.CheckBox("filterTransferDenied", ViewBag.FilterTransferDenied, htmlAttributes: new { @class = "form-check-input filterChecks" })
                     </div>
                 </div>
             </div>
@@ -639,10 +639,10 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.TransferId"><img src="~/images/Edit.png" height="20" width="20" title="Edit" /></a>
                 <a asp-action="Details" asp-route-id="@item.TransferId"><img src="~/images/Details.png" height="20" width="20" title="Details" /></a>
-                @if (User.IsInRole(Admin))
-                    {
+                @* @if (User.IsInRole(Admin))
+                    { *@
                                 <a asp-action="Delete" asp-route-id="@item.TransferId"><img src="~/images/Delete.png" height="20" width="20" title="Delete" /></a>
-                    }
+                    @* } *@
             </td>
         </tr>
 }
