Added a new page called "Spills" and its classes, added a new table in DB, updated Transfers for new column "spillId" and its processes.

--- a/New DTAPP/Views/Shared/_Layout.cshtml
+++ b/New DTAPP/Views/Shared/_Layout.cshtml
@@ -45,6 +45,10 @@
                                     <li class="nav-item">
                                         <a class="dropdown-item" asp-area="" asp-controller="FileExtensions" asp-action="Index">File Extensions</a>
                                     </li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li class="nav-item">
+                                        <a class="dropdown-item" asp-area="" asp-controller="Spills" asp-action="Index">Spills</a>
+                                    </li>
                                     @* @if (User.IsInRole(Admin))
                                     { *@
                                         <li><hr class="dropdown-divider"></li>
