--- a/New DTAPP/Views/Transfers/Edit.cshtml
+++ b/New DTAPP/Views/Transfers/Edit.cshtml
@@ -14,8 +14,8 @@
     <div class="row">
         <div class="col-md-4">
             <div asp-validation-summary="All" class="text-danger"></div>
-        
-            
+
+
             <input type="hidden" asp-for="TransferId" />
             <div class="mb-3">
                 <label asp-for="RequestCreatedAt" class="form-label">Time of Request (EST)</label>
@@ -24,7 +24,7 @@
             </div>
             <div class="mb-3">
                 <label asp-for="SentTime" class="form-label">Sent Time (EST)</label>
-                
+
                 @if (Model.SentTime != null)
                 {
                     <input id="SentTime" name="SentTime" value="@Model.SentTime.Value.ToString("yyyy-MM-ddTHH:mm:ss")" type="datetime-local" class="form-control" />
@@ -32,7 +32,7 @@
                 else{
 
                     <input id="SentTime" name="SentTime" value="" type="datetime-local" class="form-control" />
-                    
+
                 }
 
                 <span asp-validation-for="SentTime" class="text-danger"></span>
@@ -51,7 +51,7 @@
                 <label asp-for="TransferTypeId" class="form-label">Transfer Type</label>
                 <select asp-for="TransferTypeId" class="form-control" asp-items="ViewBag.TransferTypeId"></select>
                 <span asp-validation-for="TransferTypeId" class="text-danger"></span>
-           </div>
+            </div>
             <div class="mb-3">
                 <label asp-for="OperationId" class="form-label">Operation Name</label>
                 <select asp-for="OperationId" class="form-control" asp-items="ViewBag.OperationId"></select>
@@ -108,7 +108,7 @@
                 <div class="col">
                     <div class="mb-3 form-check">
                         <label class="form-check-label">
-                            <input class="form-check-input" asp-for="SpillOccurred" /> Spill Occurred
+                            <input id="spillOccurred" class="form-check-input" asp-for="SpillOccurred" /> Spill Occurred
                         </label>
                     </div>
                 </div>
@@ -172,12 +172,17 @@
                 <label for="folder" class="btn btn-secondary">Choose folder to transfer</label>
                 <input type="file" id="folder" name="folder" style="display:none" multiple webkitdirectory mozdirectory msdirectory odirectory directory>
             </div>
-            <div class="row align-items-center g-0">
+            <div class="row align-items-center g-0 my-2">
                 <div class="col">
-                    <input type="text" id="addExt" placeholder="File Extension (ie pdf)" name="addExt" class="form-control">
+                    <select asp-for="FileExtensionModel" asp-items="ViewBag.FileExtensionId" class="form-control" id="addExt" name="addExt">
+                        <option value="" selected disabled>Select a file extension...</option>
+                    </select>
+                    <span asp-validation-for="FileExtensionModel" class="text-danger"></span>
+
+                    @* <input type="text" id="addExt" placeholder="File Extension (ie pdf)" name="addExt" class="form-control"> *@
                 </div>
                 <div class="col col-md-2">
-                    <input type="text" id="addSize" placeholder="0.0" name="addSize" class="form-control">
+                    <input type="number" id="addSize" placeholder="0.0" name="addSize" class="form-control">
                 </div>
                 <div class="col align-self-end col-md-2">
                     <select class="form-select" name="size" id="sizeDropDn">
@@ -216,7 +221,7 @@
             listFiles(JSON.parse($("#fileList").val()), false);
 
             // $("#btnDeleteIcon$").src = '/../images/x-circle.svg/';
-            // alert($("#btnDeleteIcon$").src);
+            // alert($("#btnDeleteIcon$").src);            
         });
 
         function setChangeUserAndTime(type) {
